--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/gird.css">
+        <link rel="stylesheet" href="css/grid.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -30,8 +31,8 @@
             <li>Login</li>
           </ul>
         </nav>
-        <div class="">
-        <h1 class="">CHATTANEWBIE IS A PLACE FOR ALL. JOIN US.</h1>
+        <div class="banner">
+        <h1 class="h1transparency">CHATTANEWBIE IS A PLACE FOR ALL. JOIN US.</h1>
         <h3 class="">This is a second line of information.</h3>
         </div>
         <div class="slider">
@@ -52,19 +53,19 @@
         <div class="gallery1">
           <ul>
             <li class="hvr-sweep-to-top">
-              <p>FUSCE SOLLICITUDIN URNA</p>
+              <h3>FUSCE SOLLICITUDIN URNA</h3>
               <img>
               <img>
               <p>It has a profound that are the legitimatization of care. I think that's an appearance game we're playing. True simplicity. We have a very minimalist way beyond traditional views of design is environmentally friendly.</p>
             </li>
             <li class="hvr-sweep-to-top">
-              <p>FUSCE SOLLICITUDIN URNA</p>
+              <h3>FUSCE SOLLICITUDIN URNA</h3>
               <img>
               <img>
               <p>It has a profound that are the legitimatization of care. I think that's an appearance game we're playing. True simplicity. We have a very minimalist way beyond traditional views of design is environmentally friendly.</p>
             </li>
             <li class="hvr-sweep-to-top">
-              <p>FUSCE SOLLICITUDIN URNA</p>
+              <h3>FUSCE SOLLICITUDIN URNA</h3>
               <img>
               <img>
               <p>It has a profound that are the legitimatization of care. I think that's an appearance game we're playing. True simplicity. We have a very minimalist way beyond traditional views of design is environmentally friendly.</p>
@@ -105,7 +106,7 @@
 
 <!-- Begin Footer -->
       <hr>
-      <footer>
+      <div id="footer">
         <h5 class=""> CONNECT WITH CHATTANEWBIE </h5>
         <ul>
           <li><img></li>
@@ -122,7 +123,7 @@
           <li>Community Guidelines</li>
           <li>Terms of Use</li>
         </ul>
-      </footer>
+      </div>
 <!-- End Footer -->
 <!-- jQuery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
