--- a/index.html
+++ b/index.html
@@ -31,24 +31,28 @@
           <img src="img/logo.png">
         </div>
         <div class="banner">
-          I'm a(n) &nbsp;
+          <span><span>I'm a(n) &nbsp;</span>
           <label for="type"></label>
           <select class="type" name="user_type">
-            <option value="individual">Individual</option>
-            <option value="couple">Couple (no kids)</option>
-            <option value="family">Family with Kids</option>
-          </select> &nbsp; searching for &nbsp;
+            <optgroup>
+              <option class="option" value="individual">Individual</option>
+              <option value="couple">Couple (no kids)</option>
+              <option value="family">Family with Kids</option>
+            </optgroup>  
+          </select><span> &nbsp; searching for &nbsp;</span>
           
           <label for="activity"></label>
           <select class="type" name="user_activity">
-            <option value="adventure">Adventure</option>
-            <option value="restaurants">The Best Chattanooga Restaurants</option>
-            <option value="kids">The Best Activities for Kids</option>
-            <option value="bars">The Best Bars/Nightlife</option>
-            <option value="music">The Best Music Venues</option>
-            <option value="individual">Historical Sites</option>
+            <optgroup>
+              <option class="option" value="adventure">Adventure</option>
+              <option value="restaurants">The Best Chattanooga Restaurants</option>
+              <option value="kids">The Best Activities for Kids</option>
+              <option value="bars">The Best Bars/Nightlife</option>
+              <option value="music">The Best Music Venues</option>
+              <option value="individual">Historical Sites</option>
+            </optgroup>
           </select>
-          <a href="#"><img class="search-button" src="img/srch-icon.png"></a>      
+          <a href="#"><img class="search-button" src="img/srch-icon.png"></a></span>     
            </div>
       </div>
 
@@ -66,11 +70,6 @@
  <!-- Begin MailChimp Signup Form -->
 <div class="mailchimp_form">
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
 <div id="mc_embed_signup">
 <form action="//bucmba.us1.list-manage.com/subscribe/post?u=3a7acfa9a4f44bbec3ba1d1ad&amp;id=03e8adef32" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
